plugins/scripting/scripting-tests/testData/diagnostics/repl/unsafe_cast_assignment.kts
// SNIPPET

var x: Int? = null
x = 1
val y: Int <!INITIALIZER_TYPE_MISMATCH!>=<!> x
val z: Int <!INITIALIZER_TYPE_MISMATCH!>=<!> x

fun foo() {
    x = null
}
